css/components/navbar.css
#navbar {
    padding: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.icon-btn {
    width: 25px;
    padding: 15px;
}

.hamburger-btn {
    border: none;
    background-color: transparent;
    cursor: pointer;
    height: auto;
}

/* Ocultar barra de navegacion */
.nav-menu.hidden {
    display: none;
}

.nav-menu {
    list-style: none;
    padding: 0;
    margin: 0;
    width: 40px;
}

.first-nav,
.second-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #fffdf9;
    border-radius: 50px;
    margin: 15px 0;
}

